It starts to take up shape!

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="textPrimary">#FFF</color>
+    <color name="navigationBar">#121212</color>
 </resources>
