--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="textPrimary">#FFF</color>
     <color name="navigationBar">#121212</color>
+    <color name="cardBackground">#1f1f1f</color>
 </resources>
