--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="navigationBar">@color/white</color>
+    <color name="cardBackground">@color/white</color>
     <color name="textPrimary">#000000</color>
 </resources>
