--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Burr" parent="Theme.AppCompat.DayNight">
+    <style name="Theme.Burr" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/navigationBar</item>
         <item name="android:colorAccent">@color/teal_200</item>
 
