--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Burr" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Burr" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/navigationBar</item>
         <item name="android:colorAccent">@color/teal_200</item>
-        <item name="android:navigationBarColor">@color/navigationBar</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
     <style name="Theme.Burr.NoActionBar">
