--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.Burr" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Cofi" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/navigationBar</item>
         <item name="android:colorAccent">@color/teal_200</item>
 
@@ -9,12 +9,12 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.Burr.NoActionBar">
+    <style name="Theme.Cofi.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.Burr.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.Cofi.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.Burr.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.Cofi.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
