--- a/app/src/main/res/drawable/ic_coffee.xml
+++ b/app/src/main/res/drawable/ic_coffee.xml
@@ -1,9 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M2,21H20V19H2M20,8H18V5H20M20,3H4V13A4,4 0,0 0,8 17H14A4,4 0,0 0,18 13V10H20A2,2 0,0 0,22 8V5C22,3.89 21.1,3 20,3Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:fillColor="#FF000000" android:pathData="M20 3H6C4.9 3 4 3.9 4 5v8c0 2.21 1.79 4 4 4h6c2.21 0 4-1.79 4-4v-3h2c1.11 0 2-0.9 2-2V5c0-1.1-0.9-2-2-2zm0 5h-2V5h2v3zM5 19h14c0.55 0 1 0.45 1 1s-0.45 1-1 1H5c-0.55 0-1-0.45-1-1s0.45-1 1-1z"/>
 </vector>
