--- a/app/src/main/res/drawable/ic_water_plus.xml
+++ b/app/src/main/res/drawable/ic_water_plus.xml
@@ -1,9 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:fillColor="#FF000000"
-      android:pathData="M12,18C12,18.7 12.12,19.36 12.34,20C12.23,20 12.12,20 12,20C8.69,20 6,17.31 6,14C6,10 12,3.25 12,3.25S16.31,8.1 17.62,12C14.5,12.22 12,14.82 12,18M19,17V14H17V17H14V19H17V22H19V19H22V17H19Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+    <path android:fillColor="#FF000000" android:pathData="M12 18c0 0.7 0.12 1.36 0.34 2H12c-3.31 0-6-2.69-6-6 0-4 6-10.75 6-10.75S16.31 8.1 17.62 12C14.5 12.22 12 14.82 12 18m7-1v-3h-2v3h-3v2h3v3h2v-3h3v-2h-3z"/>
 </vector>
