--- a/app/src/main/res/values-v29/themes.xml
+++ b/app/src/main/res/values-v29/themes.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="Theme.Cofi" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/navigationBar</item>
-        <item name="android:colorAccent">@color/teal_200</item>
-
+        <item name="android:colorAccent">?android:attr/colorAccent</item>
+        <item name="android:background">?android:attr/background</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
