--- a/app/src/main/res/drawable/ic_picture_in_picture.xml
+++ b/app/src/main/res/drawable/ic_picture_in_picture.xml
@@ -1,3 +1,10 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
-    <path android:fillColor="#FF000000" android:pathData="M18 11h-6c-0.55 0-1 0.45-1 1v4c0 0.55 0.45 1 1 1h6c0.55 0 1-0.45 1-1v-4c0-0.55-0.45-1-1-1zm5 8V4.98C23 3.88 22.1 3 21 3H3C1.9 3 1 3.88 1 4.98V19c0 1.1 0.9 2 2 2h18c1.1 0 2-0.9 2-2zm-3 0.02H4c-0.55 0-1-0.45-1-1V5.97c0-0.55 0.45-1 1-1h16c0.55 0 1 0.45 1 1v12.05c0 0.55-0.45 1-1 1z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24"
+        android:viewportHeight="24"
+        android:tint="?attr/colorControlNormal">
+    <path
+            android:fillColor="@android:color/white"
+            android:pathData="M12,17H18Q18.425,17 18.712,16.712Q19,16.425 19,16V12Q19,11.575 18.712,11.287Q18.425,11 18,11H12Q11.575,11 11.288,11.287Q11,11.575 11,12V16Q11,16.425 11.288,16.712Q11.575,17 12,17ZM4,20Q3.175,20 2.588,19.413Q2,18.825 2,18V6Q2,5.175 2.588,4.588Q3.175,4 4,4H20Q20.825,4 21.413,4.588Q22,5.175 22,6V18Q22,18.825 21.413,19.413Q20.825,20 20,20ZM15,14Z"/>
 </vector>
