--- a/app/src/main/res/drawable/ic_coffee.xml
+++ b/app/src/main/res/drawable/ic_coffee.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24"
-        android:tint="?attr/colorControlNormal">
-    <path
-            android:fillColor="@android:color/white"
-            android:pathData="M11,18Q8.1,18 6.05,15.95Q4,13.9 4,11V5Q4,4.175 4.588,3.587Q5.175,3 6,3H18.5Q19.95,3 20.975,4.025Q22,5.05 22,6.5Q22,7.95 20.975,8.975Q19.95,10 18.5,10H18V11Q18,13.9 15.95,15.95Q13.9,18 11,18ZM6,8H16V5H6ZM18,8H18.5Q19.125,8 19.562,7.562Q20,7.125 20,6.5Q20,5.875 19.562,5.438Q19.125,5 18.5,5H18ZM5,21Q4.575,21 4.287,20.712Q4,20.425 4,20Q4,19.575 4.287,19.288Q4.575,19 5,19H19Q19.425,19 19.712,19.288Q20,19.575 20,20Q20,20.425 19.712,20.712Q19.425,21 19,21Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
+    <path android:fillColor="@android:color/white" android:pathData="M11 18q-2.9 0-4.95-2.05Q4 13.9 4 11V5q0-0.825 0.588-1.413Q5.175 3 6 3h12.5q1.45 0 2.475 1.025Q22 5.05 22 6.5q0 1.45-1.025 2.475Q19.95 10 18.5 10H18v1q0 2.9-2.05 4.95Q13.9 18 11 18zM6 8h10V5H6zm12 0h0.5q0.625 0 1.062-0.438Q20 7.125 20 6.5t-0.438-1.062Q19.125 5 18.5 5H18zM5 21q-0.425 0-0.713-0.288Q4 20.425 4 20t0.287-0.712Q4.575 19 5 19h14q0.425 0 0.712 0.288Q20 19.575 20 20t-0.288 0.712Q19.425 21 19 21z"/>
 </vector>
