--- a/app/src/main/res/drawable/ic_copy.xml
+++ b/app/src/main/res/drawable/ic_copy.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24"
-        android:tint="?attr/colorControlNormal">
-    <path
-            android:fillColor="@android:color/white"
-            android:pathData="M9,18Q8.175,18 7.588,17.413Q7,16.825 7,16V4Q7,3.175 7.588,2.587Q8.175,2 9,2H18Q18.825,2 19.413,2.587Q20,3.175 20,4V16Q20,16.825 19.413,17.413Q18.825,18 18,18ZM5,22Q4.175,22 3.587,21.413Q3,20.825 3,20V7Q3,6.575 3.288,6.287Q3.575,6 4,6Q4.425,6 4.713,6.287Q5,6.575 5,7V20Q5,20 5,20Q5,20 5,20H15Q15.425,20 15.713,20.288Q16,20.575 16,21Q16,21.425 15.713,21.712Q15.425,22 15,22Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
+    <path android:fillColor="@android:color/white" android:pathData="M9 18q-0.825 0-1.412-0.587Q7 16.825 7 16V4q0-0.825 0.588-1.413Q8.175 2 9 2h9q0.825 0 1.413 0.587Q20 3.175 20 4v12q0 0.825-0.587 1.413Q18.825 18 18 18zm-4 4q-0.825 0-1.413-0.587Q3 20.825 3 20V7q0-0.425 0.288-0.713Q3.575 6 4 6t0.713 0.287Q5 6.575 5 7v13h10q0.425 0 0.713 0.288Q16 20.575 16 21t-0.287 0.712Q15.425 22 15 22z"/>
 </vector>
