--- a/app/src/main/res/drawable/ic_delete.xml
+++ b/app/src/main/res/drawable/ic_delete.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M7,21Q6.175,21 5.588,20.413Q5,19.825 5,19V6Q4.575,6 4.287,5.713Q4,5.425 4,5Q4,4.575 4.287,4.287Q4.575,4 5,4H9Q9,3.575 9.288,3.287Q9.575,3 10,3H14Q14.425,3 14.713,3.287Q15,3.575 15,4H19Q19.425,4 19.712,4.287Q20,4.575 20,5Q20,5.425 19.712,5.713Q19.425,6 19,6V19Q19,19.825 18.413,20.413Q17.825,21 17,21ZM9,16Q9,16.425 9.288,16.712Q9.575,17 10,17Q10.425,17 10.713,16.712Q11,16.425 11,16V9Q11,8.575 10.713,8.287Q10.425,8 10,8Q9.575,8 9.288,8.287Q9,8.575 9,9ZM13,16Q13,16.425 13.288,16.712Q13.575,17 14,17Q14.425,17 14.713,16.712Q15,16.425 15,16V9Q15,8.575 14.713,8.287Q14.425,8 14,8Q13.575,8 13.288,8.287Q13,8.575 13,9Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
+    <path android:fillColor="@android:color/white" android:pathData="M7 21q-0.825 0-1.412-0.587Q5 19.825 5 19V6Q4.575 6 4.287 5.713 4 5.425 4 5t0.287-0.713Q4.575 4 5 4h4q0-0.425 0.288-0.713Q9.575 3 10 3h4q0.425 0 0.713 0.287Q15 3.575 15 4h4q0.425 0 0.712 0.287Q20 4.575 20 5t-0.288 0.713Q19.425 6 19 6v13q0 0.825-0.587 1.413Q17.825 21 17 21zm2-5q0 0.425 0.288 0.712Q9.575 17 10 17t0.713-0.288Q11 16.425 11 16V9q0-0.425-0.287-0.713Q10.425 8 10 8T9.288 8.287Q9 8.575 9 9zm4 0q0 0.425 0.288 0.712Q13.575 17 14 17t0.713-0.288Q15 16.425 15 16V9q0-0.425-0.287-0.713Q14.425 8 14 8t-0.712 0.287Q13 8.575 13 9z"/>
 </vector>
