--- a/app/src/main/res/drawable/ic_sound.xml
+++ b/app/src/main/res/drawable/ic_sound.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24"
-        android:viewportHeight="24"
-        android:tint="?attr/colorControlNormal">
-    <path
-            android:fillColor="@android:color/white"
-            android:pathData="M15.35,20.3Q14.85,20.5 14.425,20.175Q14,19.85 14,19.275Q14,19 14.163,18.788Q14.325,18.575 14.575,18.475Q16.575,17.675 17.788,15.925Q19,14.175 19,11.975Q19,9.775 17.788,8.025Q16.575,6.275 14.575,5.475Q14.3,5.375 14.15,5.15Q14,4.925 14,4.65Q14,4.1 14.425,3.775Q14.85,3.45 15.35,3.65Q17.9,4.675 19.45,6.925Q21,9.175 21,11.975Q21,14.775 19.45,17.025Q17.9,19.275 15.35,20.3ZM4,15Q3.575,15 3.288,14.712Q3,14.425 3,14V10Q3,9.575 3.288,9.287Q3.575,9 4,9H7L10.3,5.7Q10.775,5.225 11.387,5.487Q12,5.75 12,6.425V17.575Q12,18.25 11.387,18.512Q10.775,18.775 10.3,18.3L7,15ZM14,16V7.95Q15.125,8.475 15.812,9.575Q16.5,10.675 16.5,12Q16.5,13.325 15.812,14.4Q15.125,15.475 14,16ZM10,8.85 L7.85,11H5V13H7.85L10,15.15ZM7.5,12Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
+    <path android:fillColor="@android:color/white" android:pathData="M15.35 20.3q-0.5 0.2-0.925-0.125Q14 19.85 14 19.275q0-0.275 0.163-0.487 0.162-0.213 0.412-0.313 2-0.8 3.213-2.55Q19 14.175 19 11.975t-1.212-3.95q-1.213-1.75-3.213-2.55-0.275-0.1-0.425-0.325Q14 4.925 14 4.65q0-0.55 0.425-0.875Q14.85 3.45 15.35 3.65q2.55 1.025 4.1 3.275Q21 9.175 21 11.975t-1.55 5.05q-1.55 2.25-4.1 3.275zM4 15q-0.425 0-0.712-0.288Q3 14.425 3 14v-4q0-0.425 0.288-0.713Q3.575 9 4 9h3l3.3-3.3q0.475-0.475 1.087-0.213Q12 5.75 12 6.425v11.15q0 0.675-0.613 0.937-0.612 0.263-1.087-0.212L7 15zm10 1V7.95q1.125 0.525 1.812 1.625Q16.5 10.675 16.5 12q0 1.325-0.688 2.4Q15.125 15.475 14 16zm-4-7.15L7.85 11H5v2h2.85L10 15.15zM7.5 12z"/>
 </vector>
