--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -4,4 +4,5 @@
     <locale android:name="pl"/>
     <locale android:name="it"/>
     <locale android:name="de"/>
+    <locale android:name="tr"/>
 </locale-config>
