--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -5,4 +5,5 @@
     <locale android:name="it"/>
     <locale android:name="de"/>
     <locale android:name="tr"/>
+    <locale android:name="nl"/>
 </locale-config>
