--- a/wearOS/src/main/res/values/wear.xml
+++ b/wearOS/src/main/res/values/wear.xml
@@ -1,5 +1,5 @@
 <resources>
     <string-array name="android_wear_capabilities">
-        <item>CAPABILITY_WEAR_APP</item>
+        <item>verify_cofi_wear_app</item>
     </string-array>
 </resources>
