--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -6,4 +6,5 @@
     <locale android:name="de"/>
     <locale android:name="tr"/>
     <locale android:name="nl"/>
+    <locale android:name="es"/>
 </locale-config>
