add Norwegian (Bokmål) translation and updated Changelog.md

--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -5,6 +5,7 @@
     <locale android:name="it"/>
     <locale android:name="de"/>
     <locale android:name="tr"/>
+    <locale android:name="nb"/>
     <locale android:name="nl"/>
     <locale android:name="es"/>
 </locale-config>
