--- a/cofi-share/src/main/res/drawable/ic_water.xml
+++ b/cofi-share/src/main/res/drawable/ic_water.xml
@@ -1,10 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,22Q8.825,22 6.413,19.788Q4,17.575 4,13.8Q4,11.425 5.8,8.65Q7.6,5.875 11.25,2.65Q11.4,2.525 11.6,2.45Q11.8,2.375 12,2.375Q12.2,2.375 12.4,2.45Q12.6,2.525 12.75,2.65Q16.4,5.875 18.2,8.65Q20,11.425 20,13.8Q20,17.575 17.587,19.788Q15.175,22 12,22ZM12.275,19Q12.575,18.975 12.788,18.763Q13,18.55 13,18.25Q13,17.9 12.775,17.688Q12.55,17.475 12.2,17.5Q11.175,17.575 10.025,16.938Q8.875,16.3 8.575,14.625Q8.525,14.35 8.312,14.175Q8.1,14 7.825,14Q7.475,14 7.25,14.262Q7.025,14.525 7.1,14.875Q7.525,17.15 9.1,18.125Q10.675,19.1 12.275,19Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
+    <path android:fillColor="@android:color/white" android:pathData="M12 22q-3.175 0-5.587-2.212Q4 17.575 4 13.8q0-2.375 1.8-5.15 1.8-2.775 5.45-6 0.15-0.125 0.35-0.2 0.2-0.075 0.4-0.075t0.4 0.075q0.2 0.075 0.35 0.2 3.65 3.225 5.45 6Q20 11.425 20 13.8q0 3.775-2.413 5.988Q15.175 22 12 22zm0.275-3q0.3-0.025 0.513-0.237Q13 18.55 13 18.25q0-0.35-0.225-0.562Q12.55 17.475 12.2 17.5q-1.025 0.075-2.175-0.562-1.15-0.638-1.45-2.313-0.05-0.275-0.263-0.45Q8.1 14 7.825 14q-0.35 0-0.575 0.262-0.225 0.263-0.15 0.613 0.425 2.275 2 3.25Q10.675 19.1 12.275 19z"/>
 </vector>
