Reduce size of drawables pt.2

--- a/app/src/main/res/drawable/step_done_anim.xml
+++ b/app/src/main/res/drawable/step_done_anim.xml
@@ -1,28 +1,12 @@
-<animated-vector
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt">
+<animated-vector xmlns:android="http://schemas.android.com/apk/res/android" xmlns:aapt="http://schemas.android.com/aapt">
     <aapt:attr name="android:drawable">
-        <vector
-            android:name="vector"
-            android:width="24dp"
-            android:height="24dp"
-            android:viewportWidth="24"
-            android:viewportHeight="24">
-            <path
-                android:name="path"
-                android:pathData="M 9.525 18.025 Q 9.025 18.35 8.512 18.062 Q 8 17.775 8 17.175 L 8 6.825 Q 8 6.225 8.512 5.937 Q 9.025 5.65 9.525 5.975 L 17.675 11.15 Q 18.125 11.45 18.125 12 Q 18.125 12.55 17.675 12.85 Z"
-                android:fillColor="#000000"/>
+        <vector android:name="vector" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
+            <path android:name="path" android:pathData="M 9.525 18.025 Q 9.025 18.35 8.512 18.062 Q 8 17.775 8 17.175 L 8 6.825 Q 8 6.225 8.512 5.937 Q 9.025 5.65 9.525 5.975 L 17.675 11.15 Q 18.125 11.45 18.125 12 Q 18.125 12.55 17.675 12.85 Z" android:fillColor="#000000"/>
         </vector>
     </aapt:attr>
     <target android:name="path">
         <aapt:attr name="android:animation">
-            <objectAnimator
-                android:propertyName="pathData"
-                android:duration="500"
-                android:valueFrom="M 17.675 11.15 Q 17.383 10.964 17.091 10.779 Q 16.799 10.593 16.506 10.408 Q 16.214 10.222 15.922 10.037 Q 15.63 9.851 15.338 9.666 L 12.242 7.7 L 9.525 5.975 Q 9.025 5.65 8.512 5.937 Q 8 6.225 8 6.825 Q 8 8.218 8 9.611 Q 8 11.972 8 14.333 L 8 17.175 Q 8 17.775 8.512 18.062 Q 9.025 18.35 9.525 18.025 Q 10.414 17.461 11.302 16.897 L 15.691 14.11 L 17.675 12.85 Q 18.125 12.55 18.125 12 Q 18.125 11.45 17.675 11.15 M 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 L 12 12"
-                android:valueTo="M 16.975 10.225 Q 17.25 9.95 17.25 9.55 Q 17.25 9.15 16.95 8.85 Q 16.675 8.575 16.25 8.575 Q 15.825 8.575 15.55 8.85 L 10.6 13.8 L 8.425 11.625 Q 8.15 11.35 7.75 11.35 Q 7.35 11.35 7.05 11.65 Q 6.775 11.925 6.775 12.35 Q 6.775 12.775 7.05 13.05 L 9.9 15.9 Q 10.037 16.038 10.213 16.106 Q 10.387 16.175 10.6 16.175 Q 11.025 16.175 11.3 15.9 L 12.719 14.481 L 14.137 13.063 Q 14.847 12.353 15.556 11.644 Q 16.266 10.934 16.975 10.225 M 12 22 Q 9.925 22 8.1 21.212 Q 6.275 20.425 4.925 19.075 Q 3.575 17.725 2.788 15.9 Q 2 14.075 2 12 Q 2 9.925 2.788 8.1 Q 3.575 6.275 4.925 4.925 Q 6.275 3.575 8.1 2.787 Q 9.925 2 12 2 Q 14.075 2 15.9 2.787 Q 17.725 3.575 19.075 4.925 Q 20.425 6.275 21.212 8.1 Q 22 9.925 22 12 Q 22 14.075 21.212 15.9 Q 20.425 17.725 19.075 19.075 Q 17.725 20.425 15.9 21.212 Q 14.075 22 12 22 L 12 22"
-                android:valueType="pathType"
-                android:interpolator="@android:interpolator/fast_out_slow_in"/>
+            <objectAnimator android:propertyName="pathData" android:duration="500" android:valueFrom="M 17.675 11.15 Q 17.383 10.964 17.091 10.779 Q 16.799 10.593 16.506 10.408 Q 16.214 10.222 15.922 10.037 Q 15.63 9.851 15.338 9.666 L 12.242 7.7 L 9.525 5.975 Q 9.025 5.65 8.512 5.937 Q 8 6.225 8 6.825 Q 8 8.218 8 9.611 Q 8 11.972 8 14.333 L 8 17.175 Q 8 17.775 8.512 18.062 Q 9.025 18.35 9.525 18.025 Q 10.414 17.461 11.302 16.897 L 15.691 14.11 L 17.675 12.85 Q 18.125 12.55 18.125 12 Q 18.125 11.45 17.675 11.15 M 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 Q 12 12 12 12 L 12 12" android:valueTo="M 16.975 10.225 Q 17.25 9.95 17.25 9.55 Q 17.25 9.15 16.95 8.85 Q 16.675 8.575 16.25 8.575 Q 15.825 8.575 15.55 8.85 L 10.6 13.8 L 8.425 11.625 Q 8.15 11.35 7.75 11.35 Q 7.35 11.35 7.05 11.65 Q 6.775 11.925 6.775 12.35 Q 6.775 12.775 7.05 13.05 L 9.9 15.9 Q 10.037 16.038 10.213 16.106 Q 10.387 16.175 10.6 16.175 Q 11.025 16.175 11.3 15.9 L 12.719 14.481 L 14.137 13.063 Q 14.847 12.353 15.556 11.644 Q 16.266 10.934 16.975 10.225 M 12 22 Q 9.925 22 8.1 21.212 Q 6.275 20.425 4.925 19.075 Q 3.575 17.725 2.788 15.9 Q 2 14.075 2 12 Q 2 9.925 2.788 8.1 Q 3.575 6.275 4.925 4.925 Q 6.275 3.575 8.1 2.787 Q 9.925 2 12 2 Q 14.075 2 15.9 2.787 Q 17.725 3.575 19.075 4.925 Q 20.425 6.275 21.212 8.1 Q 22 9.925 22 12 Q 22 14.075 21.212 15.9 Q 20.425 17.725 19.075 19.075 Q 17.725 20.425 15.9 21.212 Q 14.075 22 12 22 L 12 22" android:valueType="pathType" android:interpolator="@android:interpolator/fast_out_slow_in"/>
         </aapt:attr>
     </target>
 </animated-vector>
