--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locale-config xmlns:android="http://schemas.android.com/apk/res/android">
     <locale android:name="en"/>
-    <locale android:name="pl"/>
-    <locale android:name="it"/>
     <locale android:name="de"/>
-    <locale android:name="tr"/>
+    <locale android:name="es"/>
+    <locale android:name="fr"/>
+    <locale android:name="hi"/>
+    <locale android:name="it"/>
     <locale android:name="nb"/>
     <locale android:name="nl"/>
-    <locale android:name="es"/>
+    <locale android:name="pl"/>
+    <locale android:name="pt-rBR"/>
+    <locale android:name="tr"/>
+    <locale android:name="uk"/>
+    <locale android:name="zh"/>
 </locale-config>
