Huge warning hunt

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"/>
+  <data class="u-url" href="{{ '/' | relative_url }}" value=""></data>
 
   <div class="wrapper">
 
