--- a/cofi-share/src/main/res/drawable/ic_step_other.xml
+++ b/cofi-share/src/main/res/drawable/ic_step_other.xml
@@ -1,3 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24" android:tint="?attr/colorControlNormal">
-    <path android:fillColor="@android:color/white" android:pathData="M8 9Q7.575 9 7.287 8.712 7 8.425 7 8t0.287-0.713Q7.575 7 8 7h12q0.425 0 0.712 0.287Q21 7.575 21 8t-0.288 0.712Q20.425 9 20 9zm0 4q-0.425 0-0.713-0.288Q7 12.425 7 12t0.287-0.713Q7.575 11 8 11h12q0.425 0 0.712 0.287Q21 11.575 21 12t-0.288 0.712Q20.425 13 20 13zm0 4q-0.425 0-0.713-0.288Q7 16.425 7 16t0.287-0.713Q7.575 15 8 15h12q0.425 0 0.712 0.287Q21 15.575 21 16t-0.288 0.712Q20.425 17 20 17zM4 9Q3.575 9 3.288 8.712 3 8.425 3 8t0.288-0.713Q3.575 7 4 7t0.713 0.287Q5 7.575 5 8T4.713 8.712Q4.425 9 4 9zm0 4q-0.425 0-0.712-0.288Q3 12.425 3 12t0.288-0.713Q3.575 11 4 11t0.713 0.287Q5 11.575 5 12t-0.287 0.712Q4.425 13 4 13zm0 4q-0.425 0-0.712-0.288Q3 16.425 3 16t0.288-0.713Q3.575 15 4 15t0.713 0.287Q5 15.575 5 16t-0.287 0.712Q4.425 17 4 17z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="m297,379 l149,-243q6,-10 15,-14.5t19,-4.5q10,0 19,4.5t15,14.5l149,243q6,10 6,21t-5,20q-5,9 -14,14.5t-21,5.5L331,440q-12,0 -21,-5.5T296,420q-5,-9 -5,-20t6,-21ZM700,880q-75,0 -127.5,-52.5T520,700q0,-75 52.5,-127.5T700,520q75,0 127.5,52.5T880,700q0,75 -52.5,127.5T700,880ZM120,820v-240q0,-17 11.5,-28.5T160,540h240q17,0 28.5,11.5T440,580v240q0,17 -11.5,28.5T400,860L160,860q-17,0 -28.5,-11.5T120,820ZM700,800q42,0 71,-29t29,-71q0,-42 -29,-71t-71,-29q-42,0 -71,29t-29,71q0,42 29,71t71,29ZM200,780h160v-160L200,620v160ZM402,360h156l-78,-126 -78,126ZM480,360ZM360,620ZM700,700Z"/>
 </vector>
