Clear some warnings

--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -13,4 +13,6 @@
     <locale android:name="tr"/>
     <locale android:name="uk"/>
     <locale android:name="zh"/>
+    <locale android:name="be"/>
+    <locale android:name="cs"/>
 </locale-config>
